@@ -24,6 +24,9 @@
 #include "zbxjson.h"
 #include "comms.h"
 
+int	discovery_verify_drule(zbx_uint64_t druleid);
+int	discovery_verify_dcheck(zbx_uint64_t druleid, zbx_uint64_t dcheckid);
+
 void	discovery_update_host(DB_DHOST *dhost, const char *ip, int status, int now);
 void	discovery_update_service(DB_DRULE *drule, DB_DCHECK *dcheck, DB_DHOST *dhost,
 		const char *ip, const char *dns, int port, int status, const char *value, int now);
